# misc-stuff

./: .gitignore  README.md
backup-sync/: sync.sh
barcode/: mycards.html
cgi-bin/: barcode.cgi  test-pl.cgi  test.cgi  thumb.cgi
curv3d/: makeSTL.sh  readme.md  watch.sh
esp8266clock/: .gitignore  build.sh  platformio.ini  remote-upload.sh
gallery/: gallery.html
git-data-manager/: data-buffer.csv  readme.md
implicitcad/: new-shape.sh  template.hs  test.hs
jscad/: .gitignore  package-lock.json  package.json  render.ts  tsconfig.json
linux-keyboard/: deploy.sh
linux-multiseat/: backup.sh  deploy.sh
linux-powerbtn/: readme.md
linux-vm/: backup.sh  readme.md  win10.xml
mathworksheet/: worksheet.html
nest/: parse.ps1
node-dns/: dns.js  package-lock.json  package.json
power-monitor/: power-monitor.service  readme.md  tuya-setup.md
push-to-talk-google-meet/: bookmarklet.js  build.sh  manifest.json
pwsh/: clean-appx.ps1  logger.psm1  ping-test.ps1
rust-monitor/: Cargo.toml  install.ps1  readme.md
rust-monitor/src/: main.rs
rwkb/: build.sh  deploy.sh  jj40_rich.hex  readme.md  teensy_rich.hex
rwkb_old/: rwkb.hex
scad/: barrel_connector.scad  case-feet.scad  case-feet2.scad  divider-stand.scad  enclosure.scad  helping-hands-spool.scad  hex.scad  shower-drain.scad  table-corner.scad  test.hs  test.scad  top.scad  util.scad
scripts/: isapi.ps1  popup.ps1
settings/: apt-installed.txt  commit.sh  cura.curaprofile  cura.i3plus.txt  dotprofile  dottmux.conf  dotvimrc  home-setup.sh  install-default.sh  settings  sync.sh  xmonad.hs
(+207 files in other folders)
