[package]
name = "rust-monitor"
version = "0.1.0"
authors = ["Richard Wang <rwang83@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ringbuf = "0.2.2"
# hyper = "0.13.8"
# tokio = { version = "0.3.1", features = ["full"] }
